--- a/ESE577_Fina_Project_1.ipynb
+++ b/ESE577_Fina_Project_1.ipynb
@@ -355,9 +355,12 @@
       },
       "outputs": [],
       "source": [
-        "dataset_train = Dataset.from_pandas(pd.DataFrame(train_data, columns=[\"text\"]))\n",
-        "dataset_val = Dataset.from_pandas(pd.DataFrame(test_data, columns=[\"text\"]))\n",
-        "dataset = DatasetDict({\"train\": dataset_train, \"test\": dataset_val})"
+        "# Convert the pandas DataFrames to Hugging Face datasets\n",
+        "dataset_train = Dataset.from_pandas(train_data)\n",
+        "dataset_test = Dataset.from_pandas(test_data)\n",
+        "\n",
+        "# Create a DatasetDict containing both train and test datasets\n",
+        "dataset = DatasetDict({\"train\": dataset_train, \"test\": dataset_test})"
       ]
     },
     {
@@ -534,7 +537,7 @@
         "    eval_dataset=dataset[\"test\"],\n",
         "    peft_config=peft_config,\n",
         "    max_seq_length=None,\n",
-        "    dataset_text_field=\"text\",\n",
+        "    dataset_text_field=\"Question\",\n",
         "    tokenizer=tokenizer,\n",
         "    args=training_arguments,\n",
         "    packing=False\n",
