--- a/ESE577_Fina_Project_2.ipynb
+++ b/ESE577_Fina_Project_2.ipynb
@@ -4,16 +4,16 @@
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
-        "id": "bOihdHPhFXNQ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "bOihdHPhFXNQ",
         "outputId": "7bf2a7f9-8146-4bec-fa05-9555c9364014"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: google-generativeai in /usr/local/lib/python3.10/dist-packages (0.8.3)\n",
             "Requirement already satisfied: google-ai-generativelanguage==0.6.10 in /usr/local/lib/python3.10/dist-packages (from google-generativeai) (0.6.10)\n",
@@ -514,9 +514,11 @@
         "\n",
         "    print(\"\\nPretrained Model Response:\")\n",
         "    print(base_answer[\"answer\"])\n",
+        "    print(base_answer[0][\"generated_text\"])\n",
         "\n",
         "    print(\"\\nFine-Tuned Model Response:\")\n",
-        "    print(fine_tuned_answer[\"answer\"])\n",
+        "    print(fine_tuned_answer[0][\"generated_text\"])\n",
+        "\n",
         "    print()\n",
         "\n",
         "# Main loop\n",
@@ -547,9 +549,10 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -566,8 +569,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.6"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
