--- a/ESE577_Fina_Project_2.ipynb
+++ b/ESE577_Fina_Project_2.ipynb
@@ -438,7 +438,7 @@
       "outputs": [],
       "source": [
         "# Set logging verbosity\n",
-        "logging.getLogger(\"transformers\").setLevel(logging.CRITICAL)\n",
+        "logging.set_verbosity(logging.CRITICAL)\n",
         "\n",
         "# Define models and pipelines\n",
         "base_pipe = pipeline(task=\"text-generation\", model=base_model, tokenizer=tokenizer, max_length=512, truncation=True)\n",
